[gd_scene load_steps=6 format=2]

[ext_resource path="res://prefab/ui/main_menu/main_menu_ui.tscn" type="PackedScene" id=1]
[ext_resource path="res://prefab/ui/main_menu/option_ui.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Main.gd" type="Script" id=3]
[ext_resource path="res://prefab/ui/loading_ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefab/common/scene_loader.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="GameController" type="Node" parent="."]

[node name="SceneLoader" parent="GameController" instance=ExtResource( 5 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenuUI" parent="UI" instance=ExtResource( 1 )]

[node name="OptionUI" parent="UI" instance=ExtResource( 2 )]
visible = false

[node name="LoadingUI" parent="UI" instance=ExtResource( 4 )]
visible = false

[node name="GameWorld" type="Node" parent="."]
[connection signal="on_finish_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_finish_load"]
[connection signal="on_start_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_start_load"]
[connection signal="on_update_load" from="GameController/SceneLoader" to="." method="_on_SceneLoader_on_update_load"]
[connection signal="on_open_option" from="UI/MainMenuUI" to="." method="_on_MainMenuUI_on_open_option"]
[connection signal="on_start_new_game" from="UI/MainMenuUI" to="." method="_on_MainMenuUI_on_start_new_game"]
[connection signal="on_back" from="UI/OptionUI" to="." method="_on_OptionUI_on_back"]
